Fix spacing problem

--- a/source/css/ChuView.css
+++ b/source/css/ChuView.css
@@ -187,9 +187,9 @@
 }
 
 .chuview-likes-text {
-    padding: 4px 0;
+    padding: 6px 0;
     display: inline-block;
-    font-size: 11pt;
+    font-size: 10pt;
     font-variant: small-caps;
     font-weight: bold;
     color: #555;
